# cmake-fortran-template

./: .gitattributes  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/flags/: GNU.cmake  Intel.cmake  NAG.cmake  PGI.cmake
cmake/utils/: fortranFunctions.cmake  pFUnit.cmake  setFlags.cmake
src/: CMakeLists.txt  main_p.f90
src/allocators/: CMakeLists.txt  blockAllocator_m.f90
src/allocators/tests/: CMakeLists.txt  blockAllocator_test.pf
utils/: CMakeLists.txt  kinds_m.f90
